--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: hamoudi_borsa
-description: "حمودي بورصة - تطبيق أسعار الذهب والحاسبة الذهبية للعراق"
+description: "الصايغ - تطبيق أسعار الذهب والحاسبة الذهبية للعراق"
 publish_to: 'none'
 
 version: 1.0.0+1
